src/test/error/nilable1.lns
{
    let val:int = nil;  // error
}
{
    let val:int = 0;
    val = nil;          // error
}
{
    let val:int! = 0;
    val = val + 1;      // error
}
{
    fn get(): int[] {
        return [1];
    }
    if! get()[1] {      // error
        print( _exp );
    }
}
{
    fn get(): int![] {
        return [1];
    }
    let val:int = get()[1];  // error
}
{
    fn get(val:int) {
    }
    get( nil ); // error
}
{
    let val:int = 0;
    let val2:int! = nil;
    let val3:stem = nil;
    let val4:stem! = nil;
    val = val2@int;
    val = val3@int;
    val = val4@int;
}
